--- a/style.css
+++ b/style.css
@@ -30,23 +30,66 @@ body{
 }
 
 .picture{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    cursor: pointer;
+    width: 90%;
+    position: relative;
+    transition: opacity 0.3s ease;
+    height: 370px;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+   
 }
 .picture img{
-    margin: 1rem;
     width: 100%;
     border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
+
+.overlay{
+    position: absolute;
+    width: 100%;
+    height: 315px;
+    background: hsl(178, 100%, 50%);
+    opacity: 0;
+    border-radius: 10px;
+}
+
+.hover-picture{
+    position: absolute;
+    scale: 15%;
+}
+
+.picture .hover-picture{
+    opacity: 0;
+}
+
+.picture:hover .overlay{
+    opacity: 0.4;
+    transition: opacity 0.3s ease;
+}
+
+.picture:hover .hover-picture{
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+
+
 
 h1{
     font-size: 24px;
     margin-left: 1rem;
     margin-top: 0;
     color: hsl(0, 0%, 100%);
-    font-weight: 400;
-    
+    font-weight: 400;   
+    cursor: pointer;
+}
+
+h1:hover{
+    color: hsl(178, 100%, 50%);
 }
 
 p{
@@ -119,8 +162,17 @@ hr{
 }
 
 .creator-text{
-    font-size: 16px;
+    font-size: 14px;
     color: hsl(215, 51%, 70%);
+}
+
+.creator-text a{
+    color:  hsla(0, 0%, 100%,0.75);
+    text-decoration: none;
+}
+
+.creator-text a:hover{
+    color: hsl(178, 100%, 50%);
 }
 
 .attribution{
